--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="about.html">about<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="about.html">contact<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="index.html">home</a>
@@ -41,25 +41,7 @@
   <div class="godown-60" id="godown"></div>
   <div class="container">
     <div class="m-3"></div>
-    <div class="row">
 
-      <div class="col-lg-8">
-        <div class="m-3"></div>
-        <h3 class="firstPageHeader">about me</h3>
-        <a href="https://www.linkedin.com/adamdepollo" class="badge badge-primary" id="linkedin">LinkedIn</a>
-        <a href="https://github.com/adamdepollo" class="badge badge-secondary">GitHub</a>
-        <div class="m-3"></div>
-        <p class="lead firstPageP">I’m a back-end software developer with a background in writing, editing, and music.</p>
-        <p class="firstPageP">In my previous work writing in corporate, news, and small business settings, I learned first-hand that even small improvements in website design can make a huge difference in productivity and user experience. That’s why
-          I decided to study Java at Grand Circus — I wanted to combine my communication skills with the ability to design software to make communication easier and more effective. I’m looking forward to finding a role at the intersection of tech and
-          the humanities where I can make the most of the skills at my disposal.</p>
-        <p class="firstPageP">Outside of business hours, I keep busy as a freelance arts writer — currently with the Michigan Quarterly Review — and as a producer and multi-instrumentalist playing with several artists in the Detroit area. </p>
-      </div>
-      <div class="col-md-4">
-        <div class="m-3"></div>
-        <img src="IMG_3567.jpeg" class="img-fluid" alt="Responsive image">
-      </div>
-    </div>
     <div class="row justify-content-center">
 
       <div col="lg-12">
