--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
-  <title>Adam DePollo | Java Developer, Writer, Musician</title>
+  <title>Adam DePollo | Java Developer | Writer | Musician</title>
 </head>
 
 <body>
@@ -21,10 +21,10 @@
 <div class="collapse navbar-collapse" id="navbarNavDropdown">
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" href="index.html">code<span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="index.html">home<span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="index.html">home</a>
+      <a class="nav-link" href="about.html">about</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="contact.html">contact</a>
@@ -32,6 +32,7 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">work</a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <a class="dropdown-item" href="code.html">code</a>
         <a class="dropdown-item" href="writing.html">writing</a>
         <a class="dropdown-item" href="music.html">music</a>
       </div>
@@ -43,57 +44,23 @@
   <div class="container">
     <div class="m-3"></div>
     <div class="row">
-      <div class="col-lg-12">
-<h3 class="firstPageHeader">code</h3>
-        <p class="firstPageP">My first coding experience came from adding HTML tags and embedding videos into the articles I wrote at my college newspaper. After spending a few years working as a writer and website manager, however, I realized not only just how much getting my work done depended on having good software at my disposal, but also how little I really knew about the systems I was working with every day. In 2019, I decided to change that and enrolled in a Java Bootcamp at Grand Circus in Detroit. There, I added the following languages and skills to my repertoire: </p>
-</div>
-        </div>
-<div class="row">
-  <div class="col-lg-12">
-  <ul class="list-group list-group-flush">
-    <table class="table table-sm firstPageP" id="codetable">
-    <tbody>
-      <thead>
-      <tr>
-        <td width="33%">Java</td>
-        <td width="33%">Spring MVC</td>
-        <td width="33%">SQL</td>
-      </tr>
-      </thead>
-      <tr>
-        <td width="33%">Git/GitHub</td>
-        <td width="33%">Hibernate</td>
-        <td width="33%">HTML/CSS</td>
-      </tr>
-      <tr>
-        <td width="33%">OOP</td>
-        <td width="33%">Web APIs</td>
-        <td width="33%">Adobe Illustrator / InDesign</td>
-      </tr>
-    </tbody>
-  </table>
-  </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
 
-        <p class="firstPageP">You'll find info on some of the programs I've made below, but you can find even more of my work on <a href="https://github.com/adamdepollo">my GitHub page</a>.</p>
-</div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6">
-        <ul class="list-unstyled">
-          <li class="media">
-            <div class="media-body firstPageP">
-              <h3 class="mt-0 mb-1 firstPageHeader">minefield</h3>
-              This Minesweeper port was a lot of fun to make. Working with a partner, I first made a version of the game that used a .txt file to store and display the minefield and took user input for which square to uncover using a basic Java compiler console. Once we had the basic logic down, I spent the weekend researching JSwing and created the GUI you can see in the accompanying gif. It includes a soundtrack of music I recorded at my home studio and a pretty realistic explosion sound for when the player loses.
-            </div>
-                </li>
-                </div>
-                <div class="col-lg-6">
-          <div class="embed-responsive embed-responsive-16by9">
-  <iframe frameBorder="0"  class = "embed-responsive-item musicvid gif" allowfullscreen></iframe>
-</div></div>
+      <div class="col-lg-8">
+        <div class="m-3"></div>
+        <h3 class="firstPageHeader">let me help you find your professional sound</h3>
+        <h3 class="firstPageHeader">in print / on stage / in the studio</h3>
+        <div class="m-3"></div>
+
+        <p class="lead firstPageP">My clients know that paying for my services buys them much more than a few lines of copy or chord changes. It buys time with a professional who's driven to achieve results, passionate about the work, and hungry for new
+          opportunities.</p>
+
+        <p class="firstPageP">I'm always looking for something new to work on. Click the button at the bottom of this page — let's talk about what I can bring to your next project.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="m-3"></div>
+        <img src="IMG_3567.jpeg" class="img-fluid" alt="Responsive image">
+      </div>
     </div>
     <div class="m-3"></div>
     </div>
