--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<!-- dir refers to directionality, in this case left to right-->
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,76 +7,65 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" data-format="inline" data-width="600" async defer></script>
   <title>Adam DePollo | Java Developer, Writer, Musician</title>
 </head>
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand navy" href="index.html">adam depollo</a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNavDropdown">
-  <ul class="navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="index.html">home<span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="about.html">about</a>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">work</a>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="code.html">code</a>
-        <a class="dropdown-item" href="writing.html">writing</a>
-        <a class="dropdown-item" href="music.html">music</a>
-      </div>
-    </li>
-  </ul>
-</div>
-</nav>
-<div class="godown-60" id="godown"></div>
+    <a class="navbar-brand navy" href="index.html">adam depollo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">about<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">contact</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">work</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="code.html">code</a>
+            <a class="dropdown-item" href="writing.html">writing</a>
+            <a class="dropdown-item" href="music.html">music</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="godown-60" id="godown"></div>
   <div class="container">
     <div class="m-3"></div>
     <div class="row">
 
       <div class="col-lg-8">
         <div class="m-3"></div>
-        <h3 class="firstPageHeader">let me help you find your professional sound</h3>
-        <h3 class="firstPageHeader">in print / on stage / in the studio</h3>
+        <h3 class="firstPageHeader">about me</h3>
+        <a href="https://www.linkedin.com/adamdepollo" class="badge badge-primary" id="linkedin">LinkedIn</a>
+        <a href="https://github.com/adamdepollo" class="badge badge-secondary">GitHub</a>
         <div class="m-3"></div>
-
-        <p class="lead firstPageP">My clients know that paying for my services buys them much more than a few lines of copy or chord changes. It buys time with a professional who's driven to achieve results, passionate about the work, and hungry for new
-          opportunities.</p>
-
-        <p class="firstPageP">I'm always looking for something new to work on. Click the button at the bottom of this page — let's talk about what I can bring to your next project.</p>
+        <p class="lead firstPageP">I’m a back-end software developer with a background in writing, editing, and music.</p>
+        <p class="firstPageP">In my previous work writing in corporate, news, and small business settings, I learned first-hand that even small improvements in website design can make a huge difference in productivity and user experience. That’s why
+          I decided to study Java at Grand Circus — I wanted to combine my communication skills with the ability to design software to make communication easier and more effective. I’m looking forward to finding a role at the intersection of tech and
+          the humanities where I can make the most of the skills at my disposal.</p>
+        <p class="firstPageP">Outside of business hours, I keep busy as a freelance arts writer — currently with the Michigan Quarterly Review — and as a producer and multi-instrumentalist playing with several artists in the Detroit area. </p>
       </div>
-
       <div class="col-md-4">
         <div class="m-3"></div>
         <img src="IMG_3567.jpeg" class="img-fluid" alt="Responsive image">
       </div>
     </div>
-    <div class="m-3"></div>
-    </div>
+  </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAguxHIAXzZXks7OZEjpVNEzA3mJOLz7o&callback=initMap"
-  type="text/javascript"></script>
-  <script>
-//insert this in your jquery
-//control the resizing of menu and go down the content in the correct position
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAguxHIAXzZXks7OZEjpVNEzA3mJOLz7o&callback=initMap" type="text/javascript"></script>
 
-    $("#navMenu").resize(function () {
-        $('#godown').height($("#navMenu").height() + 10);
-    });
-
-    if ($("#navMenu").height() > $('#godown').height()) $('#godown').height($("#navMenu").height() + 10);
-
-</script>
 </body>
 
 </html>
