--- a/code.html
+++ b/code.html
@@ -77,9 +77,10 @@
     <div class="row">
       <div class="col-lg-12">
 
-        <p class="firstPageP">You'll find info on some of the programs I've made below, but you can find even more of my work on <a href="https://github.com/adamdepollo">my GitHub page</a>.</p>
+        <p class="firstPageP">You'll find info on some of the programs I've made below, but you can find even more of my work on <a href="https://github.com/adamdepollo">my GitHub page</a>.<hr/></p>
 </div>
         </div>
+        <div class="m-3"></div>
         <div class="row">
           <div class="col-lg-6">
         <ul class="list-unstyled">
