added more work to code page

--- a/music.html
+++ b/music.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<!-- dir refers to directionality, in this case left to right-->
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
   <title>adam depollo | writing</title>
@@ -14,93 +11,98 @@
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand navy" href="index.html">adam depollo</a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNavDropdown">
-  <ul class="navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="index.html">music<span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="index.html">home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="contact.html">contact</a>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">work</a>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="code.html">code</a>
-        <a class="dropdown-item" href="writing.html">writing</a>
-      </div>
-    </li>
-  </ul>
-</div>
-</nav>
+    <a class="navbar-brand navy" href="index.html">adam depollo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">music<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">contact</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">work</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="code.html">code</a>
+            <a class="dropdown-item" href="writing.html">writing</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-<div class="godown-60" id="godown"></div>
-<div class="container">
-  <div class="m-3"></div>
-  <div class="row">
-    <div class="col-lg-12">
-<h3 class="firstPageHeader">music</h3>
-      <p class="firstPageP">I've been a musician almost my entire life, and I still try to get as many opportunities to play and write as I can. I started studying piano and violin when I was about 8 years old, but I got my first guitar when I was 12 and fell in love with it right away. Since then, the guitar has been my primary instrument (with an honorable mention to the electric bass). My go-tos these days are a 1999 MIM Fender Stratocaster and a 1996 Taylor 410. <br/><br/>In the last few years, I've had the chance to work with a bunch of incredible artists and perform at venues around the Detroit area. Songs I've helped produce have been written up in the <em>Detroit Metro Times</em>, played on WDET's "Culture Shift", performed to a sold-out crowd at St. Andrew's Hall in Detroit, and even appeared in an episode of the CW's "Batwoman." Here are a few of the recent performances and projects I've been particularly happy with:</p>
-</div>
+  <div class="godown-60" id="godown"></div>
+  <div class="container">
+    <div class="m-3"></div>
+    <div class="row">
+      <div class="col-lg-12">
+        <h3 class="firstPageHeader">music</h3>
+        <p class="firstPageP">I've been a musician almost my entire life, and I still try to get as many opportunities to play and write as I can. I started studying piano and violin when I was about 8 years old, but I got my first guitar when I was
+          12 and fell in love with it right away. Since then, the guitar has been my primary instrument (with an honorable mention to the electric bass). My go-tos these days are a 1999 MIM Fender Stratocaster and a 1996 Taylor 410. <br /><br />In
+          the last few years, I've had the chance to work with a bunch of incredible artists and perform at venues around the Detroit area. Songs I've helped produce have been written up in the <em>Detroit Metro Times</em>, played on WDET's "Culture
+          Shift", performed to a sold-out crowd at St. Andrew's Hall in Detroit, and even appeared in an episode of the CW's "Batwoman." Here are a few of the recent performances and projects I've been particularly happy with:</p>
       </div>
-  <div class="row">
-    <div class="col-md-6">
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="m-3"></div>
+        <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/Me7tkAsgWsw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-6">
+        <div class="m-3"></div>
+        <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/L1LNGabMY7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="m-3"></div>
+        <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/Ft9dxdBEJIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-6">
+        <div class="m-3"></div>
+        <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/9dnXFIqFjKI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="m-3"></div>
+        <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/EAxdJka-XfY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
+      <div class="col-md-6">
+        <div class="m-3"></div>
+        <iframe width="100%" height="315" scrolling="no" frameborder="no" allow="autoplay"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/679097160&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+      </div>
+    </div>
+    <div class="row">
+
+      <div class="col-md-6">
+        <div class="m-3"></div>
+        <iframe width="100%" height="315" scrolling="no" frameborder="no" allow="autoplay"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/520952994&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+      </div>
+
+      <div class="col-md-6">
+        <div class="m-3"></div>
+        <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="315" style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
+          sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/facing/1228725224"></iframe>
+      </div>
+    </div>
+    <div class="m-3"></div>
+    <div class="row">
       <div class="m-3"></div>
-  <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/Me7tkAsgWsw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-  <div class="col-md-6">
-    <div class="m-3"></div>
-    <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/L1LNGabMY7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="col-lg-12">
+        <iframe width="100%" height="315" scrolling="no" frameborder="no" allow="autoplay"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/261098245&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></div>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class ="col-md-6">
-    <div class="m-3"></div>
-    <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/Ft9dxdBEJIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
-  <div class ="col-md-6">
-    <div class="m-3"></div>
-    <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/9dnXFIqFjKI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
-  </div>
-<div class = "row">
-  <div class ="col-md-6">
-    <div class="m-3"></div>
-  <iframe class="musicvid" width="560" height="315" src="https://www.youtube.com/embed/EAxdJka-XfY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
-
-<div class="col-md-6">
-  <div class="m-3"></div>
-<iframe width="100%" height="315" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/679097160&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-</div>
-</div>
-<div class="row">
-
-  <div class="col-md-6">
-    <div class="m-3"></div>
-<iframe width="100%" height="315" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/520952994&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-  </div>
-
-  <div class="col-md-6">
-    <div class="m-3"></div>
-    <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="315" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/facing/1228725224"></iframe>
-  </div>
-</div>
-<div class="m-3"></div>
-<div class="row">
-  <div class="m-3"></div>
-  <div class="col-lg-12">
-<iframe width="100%" height="315" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/261098245&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></div>
-</div>
-</div>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
